# Esqlv2

duckdb-cpp-extension/: CMakeLists.txt
duckdb-cpp-extension/src/: ai_extension.cpp  algorithm_registry.cpp  create_model_parser.cpp  hyperparameter_tuning.cpp  lightgbm_detailed_metrics.cpp  lightgbm_metric_extraction.cpp  lightgbm_model_impl.cpp  lightgbm_model_schema_impl.cpp  lightgbm_train_splits.cpp  lightgbm_training_metrics.cpp  model_registry.cpp  parser_extension.cpp  predict_function.cpp  show_models_function.cpp  train_model_function.cpp
duckdb-cpp-extension/src/include/: ai_extension_extension.hpp
duckdb-cpp-extension/src/include/esql/: algorithm_registry.hpp  create_model_statement.h  hyperparameter_tuning.hpp  lightgbm_duckdb_compat.h  lightgbm_isolated.h  lightgbm_model.h  model_registry.hpp  predict_function.hpp  show_models_function.hpp
duckdb-cpp-extension/src/test/: test_extension.cpp
extension-template-c/: CMakeLists.txt
extension-template-c/.github/workflows/: MainDistributionPipeline.yml
extension-template-c/src/: ai_extension.cpp  lightgbm_detailed_metrics.cpp  lightgbm_train_splits.cpp  lightgbm_training_metrics.cpp  model_registry.cpp  parser_extension.cpp  train_model_function.cpp
extension-template-c/src/include/: algorithm_registry.hpp  create_model_statement.h  lightgbm_model.h  model_registry.hpp
extension-template-c/src/parser/: algorithm_registry.cpp  create_model_parser.cpp
